Fixed warning of align-item

--- a/src/stylesheets/Navbar.module.css
+++ b/src/stylesheets/Navbar.module.css
@@ -93,7 +93,7 @@
     right: 0;
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     font-size: 30px;
     background: var(--background);
     opacity: 0;
